[package]
authors = ["chegde <chegde@outlook.com>"]
default-run = "chegde-v"
edition = "2018"
name = "chegde-v"
version = "0.0.1"

[dependencies]
actix-web = "4.0.0-beta.6"

chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "*"
futures = { version = "0.3.5" }

jwt = "0.13.0"

async-std = "*"
tokio-postgres = "*"
[dependencies.mongodb]
default-features = false
features = ["async-std-runtime"]
version = "1.0.0"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]
