[package]
authors = ["chegde <chegde@outlook.com>"]
default-run = "chegde-v"
edition = "2018"
name = "chegde-v"
version = "0.0.1"

[dependencies]
actix-web = "4.0.0-beta.6"

chrono = "0.4"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "*"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

bytes = "*"
futures = {version = "0.3.5"}

jwt = "0.13.0"

async-std = "*"
tokio = {version = "1", features = ["full"]}

config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"

[dependencies.mongodb]
default-features = false
features = ["async-std-runtime"]
version = "1.0.0"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.25.1"
